--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,29 @@
-#server.port=8090
 #jdbc
-spring.datasource.url=jdbc:mysql://localhost:3306/permission?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=3edc#EDC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.druid.url=jdbc:mysql://182.61.43.182:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.username=root
+spring.datasource.druid.password=3edc#EDC
+spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# 初始化 最小 最大
+spring.datasource.druid.initial-size=20
+spring.datasource.druid.min-idle=20
+spring.datasource.druid.max-active=50
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+spring.datasource.druid.max-wait=60000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.druid.time-between-eviction-runs-millis=300000
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+spring.datasource.druid.validation-query=select 'x'
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+# 打开PSCache，并且指定每个连接上PSCache的大小
+spring.datasource.druid.poolPreparedStatements=true
+spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 
 #mybatis
-mybatis.config-locations=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:mapper/**/*xml
+mybatis.mapper-locations=classpath:mapper/*.xml
+logging.config=classpath:log4j2.xml
+
+spring.jmx.enabled=false
