--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #jdbc
-spring.datasource.druid.url=jdbc:mysql://182.61.43.182:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.druid.url=jdbc:mysql://172.18.230.12:3306/system?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.druid.username=root
 spring.datasource.druid.password=3edc#EDC
 spring.datasource.druid.driver-class-name=com.mysql.cj.jdbc.Driver
