--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,12 @@ spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 mybatis.mapper-locations=classpath:mapper/*.xml
 logging.config=classpath:log4j2.xml
 
+
+spring.jackson.serialization.write-dates-as-timestamps=true
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=0
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=50MB
+uploadPath =D\:/websites/
+#uploadPath = /mnt/jingsu/website
 spring.jmx.enabled=false
