--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,7 +24,7 @@ spring.datasource.druid.maxPoolPreparedStatementPerConnectionSize=20
 
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
-logging.config=classpath:log4j2.xml
+logging.config=classpath:log4j2-prod.xml
 
 
 spring.jackson.serialization.write-dates-as-timestamps=true
@@ -32,6 +32,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=50MB
-uploadPath =D\:/websites/
-#uploadPath = /mnt/jingsu/website
+uploadPath =/opt/upload/ebook
 spring.jmx.enabled=false
