--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -31,5 +31,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=0
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=50MB
-uploadPath =D\:/websites/
+uploadPath =G\:/websites/
 spring.jmx.enabled=false
